feat: add service core, features, tariffs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
     /* ui colors */
     --primary: 262, 63%, 21%;
     --primary-foreground: 60, 3%, 18%;
+    --prime: 277, 60%, 45%;
 
     --primary-two: 277, 60%, 45%;
     --primary-two-foreground: 60, 3%, 18%;
