--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@
 }
 
 .background-image {
-  background-image: url('../../public/bg-image.webp');
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.1%) 10%), url('../../public/bg-image.webp');
   background-size: cover;
   background-position: center;
   /* height: v */
