--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,24 +30,28 @@
 @layer base {
   :root {
     /* ui colors */
-    --primary: 241, 86%, 59%;
-    --primary-foreground: 60, 3%, 18%;
-    --prime: 277, 60%, 45%;
-    --background: 0, 0%, 96%;
-    --foreground: 60, 3%, 18%;
+    --legal-entity: 212 17% 48%;
+    --individual-entrepreneur: 104 39% 59%;
+    --individual: 198 100% 47%;
+
+    --primary: 241 86% 59%;
+    --primary-foreground: 60 3% 18%;
+    --prime: 277 60% 45%;
+    --background: 0 0% 96%;
+    --foreground: 60 3% 18%;
     --card: 0 0% 100%;
-    --card-foreground: 60, 3%, 18%;
+    --card-foreground: 60 3% 18%;
     --popover: 0 0% 100%;
-    --popover-foreground: 60, 3%, 18%;
+    --popover-foreground: 60 3% 18%;
     --secondary: 0 0% 60%;
-    --secondary-foreground: 60, 3%, 18%;
+    --secondary-foreground: 60 3% 18%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
-    --accent-foreground: 60, 3%, 18%;
+    --accent-foreground: 60 3% 18%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 60, 3%, 18%;
+    --border: 60 3% 18%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
