--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@
     --legal-entity: 212 17% 48%;
     --individual-entrepreneur: 104 39% 59%;
     --individual: 198 100% 47%;
+    --sidebar: 183 100% 27%;
 
     --primary: 241 86% 59%;
     --primary-foreground: 60 3% 18%;
