feat: add main info card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@
     --individual-entrepreneur: 104 39% 59%;
     --individual: 198 100% 47%;
     --sidebar: 183 100% 27%;
+    --info: 166 58% 55%;
 
     --primary: 241 86% 59%;
     --primary-foreground: 60 3% 18%;
