--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,50 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  @keyframes progress {
+    0% {
+      --percentage: 0;
+    }
+
+    100% {
+      --percentage: var(--value);
+    }
+  }
+
+  @property --percentage {
+    syntax: '<number>';
+    inherits: true;
+    initial-value: 0;
+  }
+
+  [role="progressbar"] {
+    --percentage: var(--value);
+    --primary: #369;
+    --secondary: #adf;
+    animation: progress 2s 0.5s forwards;
+    aspect-ratio: 2 / 1;
+    border-radius: 50% / 100% 100% 0 0;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  [role="progressbar"]::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: conic-gradient(from 0.75turn at 50% 100%, #FF6E4E, #FFEB4F, #77BD8B 180deg);
+    mask: radial-gradient(at 50% 100%, white 55%, transparent 55.5%);
+    mask-mode: alpha;
+    -webkit-mask: radial-gradient(at 50% 100%, #0000 55%, #000 55.5%);
+    -webkit-mask-mode: alpha;
+  }
 }
 
 .background-image {
