--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,13 +26,11 @@
   src: url("../../public/fonts/gilroy/Gilroy-Bold.ttf");
 }
 
-
 @layer base {
   :root {
     /* ui colors */
-    --legal-entity: 212 17% 48%;
-    --individual-entrepreneur: 104 39% 59%;
-    --individual: 198 100% 47%;
+    --companies: 104 39% 59%;
+    --individuals: 198 100% 47%;
     --sidebar: 183 100% 27%;
     --info: 166 58% 55%;
 
@@ -89,7 +87,7 @@
   }
 
   @property --percentage {
-    syntax: '<number>';
+    syntax: "<number>";
     inherits: true;
     initial-value: 0;
   }
@@ -115,7 +113,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: conic-gradient(from 0.75turn at 50% 100%, #FF6E4E, #FFEB4F, #77BD8B 180deg);
+    background: conic-gradient(
+      from 0.75turn at 50% 100%,
+      #ff6e4e,
+      #ffeb4f,
+      #77bd8b 180deg
+    );
     mask: radial-gradient(at 50% 100%, white 55%, transparent 55.5%);
     mask-mode: alpha;
     -webkit-mask: radial-gradient(at 50% 100%, #0000 55%, #000 55.5%);
@@ -124,7 +127,12 @@
 }
 
 .background-image {
-  background-image: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.1%) 10%), url('../../public/bg-image.webp');
+  background-image: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.1%) 10%
+    ),
+    url("../../public/bg-image.webp");
   background-size: cover;
   background-position: center;
   /* height: v */
